@@ -1,3 +1,14 @@
+2013-01-08  Chris Rogers  <crogers@google.com>
+
+        Remove unused/deprecated render() method in chromium WebKit API
+        https://bugs.webkit.org/show_bug.cgi?id=106399
+
+        Reviewed by Kent Tamura.
+
+        * src/AudioDestinationChromium.cpp:
+        * src/AudioDestinationChromium.h:
+        (AudioDestinationChromium):
+
 2013-01-08  Yoshifumi Inoue  <yosin@chromium.org>
 
         Remove WebKit/chromium/src/DragScrollTimer.{cpp,h}
