@@ -1,3 +1,12 @@
+2013-01-08  Chris Rogers  <crogers@google.com>
+
+        Remove unused/deprecated render() method in chromium WebKit API
+        https://bugs.webkit.org/show_bug.cgi?id=106399
+
+        Reviewed by Kent Tamura.
+
+        * chromium/public/WebAudioDevice.h:
+
 2013-01-08  James Robinson  <jamesr@chromium.org>
 
         [chromium] Remove transitional #defines from WebKit API headers
